Adding numbers for composition of the early PE sample

--- a/B8Paper/25-EventTiming.tex
+++ b/B8Paper/25-EventTiming.tex
@@ -44,8 +44,11 @@ direction; however the scattering angle is small at the time the majority of Che
 Figure~\ref{fig:ArrivalTimeDist} shows the output of the detector simulation for 1000 simulated \Te~ 0\nbb-decay 
 events. The left-hand panel in Fig.~\ref{fig:ArrivalTimeDist} compares PE arrival time between Cherenkov and scintillation light.
 The right-hand panel shows the composition of the early PE sample, which is key to direction and topographical reconstruction, 
-selected with the time cut of 33.5~ns. Each \Te~ 0\nbb-decay produces total of 6X$\pm$X PEs in the early PE sample. 
-There are 3X$\pm$X scintillation and 3X$\pm$X Cherenkov PEs.
+selected with the time cut of 33.5~ns. On average each \Te~ 0\nbb-decay produces total of 62.8$\pm$0.3 PEs in the early PE sample. 
+Event-by-event fluctuations on the total number of PEs in the early sample have the root mean squre (RMS) of 8.9 PEs. 
+On average the early PE sample consist of 28.6$\pm$0.2 scintillation and 34.2$\pm$0.2 Cherenkov PEs, where event-by-event fluctuations have
+the RMS of 5.2 and 7.3 repectively.
+
 
 
 \begin{figure*}[ht]
@@ -83,13 +86,20 @@ for 0\nbb-decay events shown in Fig.~\ref{fig:ArrivalTimeDist}. The electron pat
 introduce any noticable difference in the shape of PE timing distributions between a single electron from \B~events and two 
 electrons from 0\nbb-events.
 
-Each \B~event produces total of 7X$\pm$X PEs in the early PE sample. There are 3X$\pm$X scintillation and 4X$\pm$X Cherenkov PEs.
-The total energy depositited in the detector in \B~and 0\nbb-decay events is the same. This leads to the same amount of 
-scintillation light produced in the detector. The number of Cherenkov photons is slightly higher for \B~events because the Cherenkov 
-light is being produced by a single electron with the same kinetic energy as the sum of kinetic energy of two electrons 
+
+On average each \B~event produces total of 69.9$\pm$0.3 PEs in the early PE sample.
+Event-by-event fluctuations on the total number of PEs in the early sample have the RMS of 9.7 PEs.
+On average the early PE sample consist of 27.6$\pm$0.2 scintillation and 42.3$\pm$0.3 Cherenkov PEs, where event-by-event fluctuations have
+the RMS of 5.2 and 8.2 repectively.
+
+The total energy depositited in the detector in \B~and 0\nbb-decay events is the same. This leads to nearly the same amount of 
+scintillation light produced in the detector. 
+
+The number of Cherenkov photons is $\sim$10\% higher for \B~events compared to 0\nbb-decay events. This is because Cherenkov 
+light in \B~events is being produced by a single electron, while the same kinetic energy is split between two electrons 
 in 0\nbb-decay events. 
 
-We do note use small difference in the total number of PEs in the early PE sample to separate 0\nbb-decay signal from \B~background.
-However, it may provide an extra handle on signal-background separation in a multivariative analysis when combined with directional
-and topographical information.
+We do note use small difference in the total number of PEs in the early PE sample due to Cherenkov PE contribution 
+to separate 0\nbb-decay signal from \B~background However, it may provide an extra handle on signal-background separation in a 
+multivariative analysis when combined with directional and topographical information.
 
