--- a/B8Paper/25-EventTiming.tex
+++ b/B8Paper/25-EventTiming.tex
@@ -36,8 +36,9 @@ about 0\nbb-decay events also hold for 2\nbb-decay when the total energy of the 
 
 
 %Should we recalculate for 130Te.
-Examining the kinematics for one of the 0\nbb~electrons with equal energy split, a 1.26~MeV electron travels a total path length of 0.X~cm, 
-has a distance from the origin of 0.X~cm in 0.0X$\pm$0.00X~ns  and takes 0.0X$\pm$0.00X~ns to drop below Cherenkov threshold. 
+Examining the kinematics for one of the 0\nbb~electrons with equal energy split, a 1.26~MeV electron travels a total path length of 
+7.1$\pm$0.9~mm, 
+has a distance from the origin of 5.6$\pm$1.0~mm in 26.2$\pm$3.4~ps  and takes 23.5$\pm$3.2~ps to drop below Cherenkov threshold. 
 We note that due to scattering of the electron, the final direction of the electron before it stops does not correspond to the initial 
 direction; however the scattering angle is small at the time the majority of Cherenkov light is produced.
 
@@ -78,8 +79,8 @@ For a detector similar to our model, \B~background is significant due to large t
 the active region of the detector.
 Electrons from elastic scattering of \B~solar neutrinos have nearly a flat energy spectrum around the 
 Q-value~\cite{SNOp-B8-bkg}. We simulate \B~background as a single monochromatic electron with energy of 2.53~MeV 
-(Q-value of \Te). A 2.53~MeV electron travels a total path length of 0.X~cm, has a distance from the origin of 0.X~cm in 
-0.0X$\pm$0.00X~ns  and takes 0.0X$\pm$0.00X~ns to drop below Cherenkov threshold.
+(Q-value of \Te). A 2.53~MeV electron travels a total path length of 15.5$\pm$2.0~mm, has a distance from the origin of 12.6$\pm$2.2~mm in 
+54.9$\pm$6.9~ps and takes 49.3$\pm$1.3~ps to drop below Cherenkov threshold.
 
 The shape of scintillation and Cherenkov PE timing distributions in \B~events match very closely the shape of corresponding distributions
 for 0\nbb-decay events shown in Fig.~\ref{fig:ArrivalTimeDist}. The electron path length is too short compared to the detector size to 
