--- a/B8Paper/spherical_paper.tex
+++ b/B8Paper/spherical_paper.tex
@@ -2,7 +2,8 @@
 \begin{document}
 \input{common_commands}
 
-\graphicspath{{plots/}}
+%\graphicspath{{plots/}}
+\graphicspath{{figs/}}
 
 %\usepackage{lineno}
 \linenumbers
