--- a/B8Paper/abstract.tex
+++ b/B8Paper/abstract.tex
@@ -1,17 +1,22 @@
-We present a technique for separating double beta decay (\bb-decay) events from 
-background due to \B~solar neutrino interactions. This background becomes dominant 
-in a kilo-ton scale liquid scintillator detector. In searches for the neutrinoless 
-double beta decay (0\nbb-decay) \B~background is usually considered as irreducible 
-due to an overlap in the energy deposition. We note that in a liquid scintillator 
-detector electrons from 0\nbb-decay often exceed Cherenkov threshold. Selection of 
-early photons using fast photo-detectors separates prompt directional Cherenkov 
-light from delayed isotropic scintillation light. This leads to the possibility of 
-reconstructing the event topology of 0\nbb-decay candidate events by analyzing 
-spatial distribution of early photons. Using a simulation of a 6.5~m radius liquid 
-scintillator detector with 100~ps resolution photo-detectors, we perform a 
-spherical harmonics analysis of the early light emitted in each candidate event and 
-show the difference between 0\nbb-decay signal and \B~background events. We discuss 
-key detector parameters that affect the separation power.
+We present a technique for separating nuclear double beta decay
+(\bb-decay) events from background neutrino interactions due to
+\B~decays in the sun.  This background becomes dominant in a
+kiloton-scale liquid-scintillator detector deep underground, and is
+usually considered as irreducible due to an overlap in deposited
+energy with the signal.  However, electrons from 0\nbb-decay often
+exceed the Cherenkov threshold in liquid scintillator, producing
+photons that are prompt and correlated in direction with the
+initial electron direction.. The use of large-area fast photodetectors
+allows some separation of these prompt photons from delayed isotropic
+scintillation light, and thus the possibility of reconstructing the
+event topology.  Using a simulation of a 6.5~m radius liquid
+scintillator detector with 100~ps resolution photodetectors, we show
+that a spherical harmonics analysis of early-arrival light can
+discriminate between 0\nbb-decay signal and
+\B~ solar neutrino background events on a statistical basis. 
+Good separation will require the development of a slow scintillator 
+with a 5 nsec risetime.
+
 
 
 %We propose a technique for separating 0{\nbb}-decay events from
